# extractor-api-lib/src/extractor_api_lib/apis/extractor_api.py
@@ -1,11 +1,11 @@
 # coding: utf-8
 
-from typing import Annotated, Dict, List  # noqa: F401
+from typing import Dict, List  # noqa: F401
 import importlib
 import pkgutil
 
 from extractor_api_lib.apis.extractor_api_base import BaseExtractorApi
-import extractor_api_lib.impl
+import openapi_server.impl
 
 from fastapi import (  # noqa: F401
     APIRouter,
@@ -23,36 +23,51 @@ from fastapi import (  # noqa: F401
 )
 
 from extractor_api_lib.models.extra_models import TokenModel  # noqa: F401
-from pydantic import StrictBytes, StrictStr
-from fastapi import Request, Response, UploadFile
-from typing import Any, List, Optional, Tuple, Union
+from typing import Any, List
+from extractor_api_lib.models.extraction_parameters import ExtractionParameters
+from extractor_api_lib.models.extraction_request import ExtractionRequest
 from extractor_api_lib.models.information_piece import InformationPiece
-from extractor_api_lib.models.key_value_pair import KeyValuePair
 
 
 router = APIRouter()
 
-ns_pkg = extractor_api_lib.impl
+ns_pkg = openapi_server.impl
 for _, name, _ in pkgutil.iter_modules(ns_pkg.__path__, ns_pkg.__name__ + "."):
     importlib.import_module(name)
 
 
 @router.post(
-    "/extract",
+    "/extract_from_file",
     responses={
         200: {"model": List[InformationPiece], "description": "List of extracted information."},
-        422: {"description": "Body is not a valid source."},
+        422: {"description": "Body is not a valid PDF."},
         500: {"description": "Something somewhere went terribly wrong."},
     },
     tags=["extractor"],
     response_model_by_alias=True,
 )
-async def extract(
-    type: Annotated[str, Form()],
-    name: Annotated[str, Form()],
-    file: Optional[UploadFile] = None,
-    kwargs: Optional[Annotated[List[KeyValuePair], Form()]] = None,
+async def extract_from_file_post(
+    extraction_request: ExtractionRequest = Body(None, description=""),
 ) -> List[InformationPiece]:
     if not BaseExtractorApi.subclasses:
         raise HTTPException(status_code=500, detail="Not implemented")
-    return await BaseExtractorApi.subclasses[0]().extract(type, name, file, kwargs)
+    return await BaseExtractorApi.subclasses[0]().extract_from_file_post(extraction_request)
+
+
+@router.post(
+    "/extract_from_source",
+    responses={
+        200: {"model": List[InformationPiece], "description": "ok"},
+        404: {"description": "not found"},
+        422: {"description": "unprocessable entity"},
+        500: {"description": "internal server error"},
+    },
+    tags=["extractor"],
+    response_model_by_alias=True,
+)
+async def extract_from_source(
+    extraction_parameters: ExtractionParameters = Body(None, description=""),
+) -> List[InformationPiece]:
+    if not BaseExtractorApi.subclasses:
+        raise HTTPException(status_code=500, detail="Not implemented")
+    return await BaseExtractorApi.subclasses[0]().extract_from_source(extraction_parameters)
